--- a/Practice/Js Counter/index.html
+++ b/Practice/Js Counter/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Counter</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
     <div class="container">
         <h1>Counter App</h1>
-        
+
         <div class="counter">
             <button id="inc-btn">+</button>
             <div id="counter-value">0</div>
@@ -17,8 +19,8 @@
         </div>
         <button id="reset">Reset</button>
     </div>
- 
-    <script src="script.js"></script>
 
+    <script src="script.js"></script>
 </body>
+
 </html>
